open-source/css/open-source.css
html, body {
    height: 100%;
}
body {
    background: #0d0d0d;
    color: white;
    font-family: 'Vollkorn', serif;
}
.jumbotron {
    padding: 0;
    width: 100%;
    background: transparent;
}
@media only screen and (min-width : 992px) {
    .jumbotron {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
    }
}
.container-fluid {
    width: 100%;
}
.banner-container {
    padding: 0;
}
.banner {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    height: 250px;
    opacity: 0;
}
.banner-action {
    position: absolute;
    bottom: 5px;
    opacity: 0;
}
.banner-title {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    font-size: x-large;
}
.banner-faudroids {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    font-size: x-large;
    display: none;
}
.banner-faudroids a {
    text-decoration: none;
    color: white;
}
.fa-github {
    right: 65px;
}
.fa-download {
    right: 5px;
}
.fa {
    color: #E1F5FE;
}

